<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/climate_DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="0dp"
    tools:context=".climate.ui.activities.ClimateActivity"
    tools:ignore="MissingDefaultResource">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintVertical_bias="0.48000002">

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/climateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:gravity="center"
                    android:textSize="24sp"
                    tools:text="@string/climate_title" />

                <TextView
                    android:id="@+id/climateDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/climate_text" />

                <Button
                    android:id="@+id/weather_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/principal_blue"
                    android:text="@string/goToWeather" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>