<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/regionImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/region_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/about_corea" />

        <TextView
            android:id="@+id/regionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="70dp"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/optionImageButton"
            app:layout_constraintStart_toEndOf="@+id/regionImageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/regionText" />

        <ImageButton
            android:id="@+id/optionImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/three_dot"
            android:contentDescription="@string/option_region_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>