<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".currency_conversor.view.CurrencyConversorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="491dp" />

    <LinearLayout
        android:id="@+id/textLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fromTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/badge_text_view"
                android:textColor="@android:color/background_dark" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/fromSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:dropDownWidth="wrap_content"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/proceed_text_view"
                android:textColor="@android:color/background_dark" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/toSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:dropDownWidth="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFirstCurrencyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.896"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnSecondCountry"
                app:layout_constraintVertical_bias="0.073" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/amount_text_view"
                android:ems="5"
                android:inputType="numberDecimal"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>


    </LinearLayout>


        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:text="@string/calculate_button_text"
            app:layout_constraintBottom_toTopOf="@+id/lytResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLinearLayout" />

    <ProgressBar
        android:id="@+id/prgLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton"
        app:layout_constraintVertical_bias="0.0"  />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/lytResult"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.23"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton">

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSecondCurrencyName"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>


    <EditText
        android:id="@+id/etSecondCurrency"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        android:hint="@string/converted_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytResult"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>