<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".main_menu.MainMenuActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/IconNegro">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_menu_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <LinearLayout
                        android:id="@+id/aboutCorea_btn"
                        android:layout_width="0dp"
                        android:layout_height="210dp"
                        android:background="@drawable/rectangular_btn_shape"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@id/currency_conversor_btn"
                        app:layout_constraintEnd_toStartOf="@id/language_btn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/aboutCorea_btn_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            app:srcCompat="@drawable/ic_btn_about_corea" />

                        <TextView
                            android:id="@+id/aboutCorea_btn_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/about_corea_btn_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/language_btn"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:background="@drawable/rectangular_btn_shape"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@id/transport_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/aboutCorea_btn"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/language_btn_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="32dp"
                            app:srcCompat="@drawable/ic_btn_language" />

                        <TextView
                            android:id="@+id/language_btn_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/language_btn_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/currency_conversor_btn"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:background="@drawable/rectangular_btn_shape"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@id/entertaiment_btn"
                        app:layout_constraintEnd_toStartOf="@id/transport_btn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/aboutCorea_btn">

                        <ImageView
                            android:id="@+id/currency_conversor_btn_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="32dp"
                            app:srcCompat="@drawable/ic_btn_currency_conversor" />

                        <TextView
                            android:id="@+id/currency_conversor_btn_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/currency_conversor_btn_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/transport_btn"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:background="@drawable/rectangular_btn_shape"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@id/gastronomy_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/currency_conversor_btn"
                        app:layout_constraintTop_toBottomOf="@id/language_btn">

                        <ImageView
                            android:id="@+id/transport_btn_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            app:srcCompat="@drawable/ic_btn_transport" />

                        <TextView
                            android:id="@+id/transport_btn_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/transport_btn_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/entertaiment_btn"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:background="@drawable/rectangular_btn_shape"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@id/tourist_sites_btn"
                        app:layout_constraintEnd_toStartOf="@id/gastronomy_btn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/currency_conversor_btn">

                        <ImageView
                            android:id="@+id/entertaiment_btn_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="32dp"
                            app:srcCompat="@drawable/ic_btn_entertaiment" />

                        <TextView
                            android:id="@+id/entertaiment_btn_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/entertaiment_btn_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gastronomy_btn"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:background="@drawable/rectangular_btn_shape"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@id/contacts_of_interest_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/entertaiment_btn"
                        app:layout_constraintTop_toBottomOf="@id/transport_btn">

                        <ImageView
                            android:id="@+id/gastronomy_btn_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            app:srcCompat="@drawable/ic_btn_gastronomy" />

                        <TextView
                            android:id="@+id/gastronomy_btn_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/gastronomy_btn_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tourist_sites_btn"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:background="@drawable/rectangular_btn_shape"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/contacts_of_interest_btn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/entertaiment_btn">

                        <ImageView
                            android:id="@+id/tourist_sites_btn_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            app:srcCompat="@drawable/ic_btn_tourist_sites" />

                        <TextView
                            android:id="@+id/tourist_sites_btn_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/tourist_sites_btn_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/contacts_of_interest_btn"
                        android:layout_width="0dp"
                        android:layout_height="210dp"
                        android:background="@drawable/rectangular_btn_shape"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tourist_sites_btn"
                        app:layout_constraintTop_toBottomOf="@id/gastronomy_btn">

                        <ImageView
                            android:id="@+id/contacts_of_interest_btn_img"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20sp"
                            app:srcCompat="@drawable/ic_btn_contacts_of_interest" />

                        <TextView
                            android:id="@+id/contacts_of_interest_btn_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/contacts_of_interest_btn_text" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>